--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,40 +2,32 @@ services:
   frontend:
     build:
       context: ./Meetopia
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "5173:5173"
-    volumes:
-      - ./Meetopia:/app
-      - /app/node_modules
-    environment:
-      - VITE_API_URL=${VITE_API_URL}
-      - VITE_SOCKET_URL=${VITE_SOCKET_URL}
+      - "80:80"
+    env_file:
+      - .env.prod
     depends_on:
       - backend
 
   backend:
     build:
       context: ./api
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./api:/app
-      - /app/node_modules
     env_file:
-      - .env
+      - .env.prod
     depends_on:
       - postgres
 
   postgres:
     image: postgres:18-alpine
     env_file:
-      - .env
-    ports:
-      - "5432:5432"
+      - .env.prod
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
 volumes:
   postgres_data:
