--- a/Meetopia/Dockerfile
+++ b/Meetopia/Dockerfile
@@ -1,11 +1,22 @@
 FROM node:22-alpine AS builder
 WORKDIR /app
+
+# Build arguments for environment variables
+ARG VITE_API_URL
+ARG VITE_SOCKET_URL
+
+# Set environment variables for build
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_SOCKET_URL=$VITE_SOCKET_URL
+
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
 FROM nginx:alpine AS production
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
